--- a/index.html
+++ b/index.html
@@ -585,15 +585,10 @@
         <div class="d-flex justify-content-between">
           <a href="https://www.instagram.com/highnessclinics">
             <img
-              style="
-                border-radius: 50%;
-                font-size: calc(60px / 2);
-                width: 60px;
-                height: 60px;
-                padding: 0px 0px;
-              "
+              class="avatar3026862339__content"
+              style="width: 50px !important; height: 50px"
               alt="highnessclinics Instagram page"
-              src="https://scontent-iad3-2.xx.fbcdn.net/v/t51.2885-15/328164994_1636496093449525_8430751625236473436_n.jpg?_nc_cat=111&amp;ccb=1-7&amp;_nc_sid=7d201b&amp;_nc_ohc=cY-ahD7yttYAX8JPUFB&amp;_nc_ht=scontent-iad3-2.xx&amp;edm=AL-3X8kEAAAA&amp;oh=00_AfCsOhkA8Zx5CMP88yHqIRjYfbMBF5w9OkT_wAMcfkTf_w&amp;oe=6546F23B"
+              src="https://scontent-iad3-2.xx.fbcdn.net/v/t51.2885-15/328164994_1636496093449525_8430751625236473436_n.jpg?_nc_cat=111&amp;ccb=1-7&amp;_nc_sid=7d201b&amp;_nc_ohc=POhNiFgJ1CcAX8xETzG&amp;_nc_ht=scontent-iad3-2.xx&amp;edm=AL-3X8kEAAAA&amp;oh=00_AfDbbngo0UMrLIUg8f86JjMjUX5Wk6UGE3IR6FKNANlHdw&amp;oe=654EDB3B"
             />
           </a>
           <h3 class="text-white my-auto">highnessclinics</h3>
